# AI-Framework-using-rust

./: .gitignore  README.md
.github/workflows/: ci.yml  security.yml
neuralframe/: Cargo.toml  README.md
neuralframe/.github/workflows/: ci.yml  security.yml
neuralframe/crates/neuralframe-agents/: Cargo.toml
neuralframe/crates/neuralframe-agents/src/: builtin_tools.rs  lib.rs  orchestrator.rs  planning.rs
neuralframe/crates/neuralframe-auth/: Cargo.toml
neuralframe/crates/neuralframe-auth/src/: lib.rs
neuralframe/crates/neuralframe-cache/: Cargo.toml
neuralframe/crates/neuralframe-cache/src/: lib.rs
neuralframe/crates/neuralframe-core/: Cargo.toml
neuralframe/crates/neuralframe-core/src/: error.rs  extractors.rs  lib.rs  middleware.rs  response.rs  router.rs  server.rs
neuralframe/crates/neuralframe-llm/: Cargo.toml
neuralframe/crates/neuralframe-llm/src/: error.rs  lib.rs  retry.rs  streaming.rs  tools.rs  types.rs
neuralframe/crates/neuralframe-llm/src/providers/: anthropic.rs  google.rs  groq.rs  mod.rs  ollama.rs  openai.rs
neuralframe/crates/neuralframe-memory/: Cargo.toml
neuralframe/crates/neuralframe-memory/src/: context.rs  lib.rs  types.rs
neuralframe/crates/neuralframe-memory/src/backends/: inmemory.rs  mod.rs  postgres.rs  redis_backend.rs  sqlite.rs
neuralframe/crates/neuralframe-prompt/: Cargo.toml
neuralframe/crates/neuralframe-prompt/src/: lib.rs
neuralframe/crates/neuralframe-py/: Cargo.toml
neuralframe/crates/neuralframe-py/src/: lib.rs
neuralframe/crates/neuralframe-vector/: Cargo.toml
neuralframe/crates/neuralframe-vector/benches/: vector_bench.rs
neuralframe/crates/neuralframe-vector/src/: hnsw.rs  lib.rs  metrics.rs  storage.rs
neuralframe/examples/: chatbot_server.rs  multi_agent.rs  rag_pipeline.rs
neuralframe/tests/: integration_agents.rs  integration_auth.rs  integration_cache.rs  integration_core.rs  integration_memory.rs  integration_vector.rs
