[workspace]
resolver = "2"
members = [
    "crates/neuralframe-core",
    "crates/neuralframe-llm",
    "crates/neuralframe-memory",
    "crates/neuralframe-agents",
    "crates/neuralframe-vector",
    "crates/neuralframe-prompt",
    "crates/neuralframe-cache",
    "crates/neuralframe-auth",
    "crates/neuralframe-py",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NeuralFrame Contributors"]
license = "MIT OR Apache-2.0"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime & networking
tokio = { version = "1", features = ["full"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async utilities
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["full"] }
pin-project-lite = "0.2"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream"] }

# Concurrent data structures
dashmap = "6"

# Database
redis = { version = "0.25", features = ["tokio-comp"] }
sqlx = { version = "0.7", features = ["postgres", "sqlite", "runtime-tokio"] }

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = "0.22"

# Python bindings
pyo3 = { version = "0.21", features = ["extension-module"] }

# Testing & benchmarks
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1"

# Parallelism
rayon = "1"

# Token counting
tiktoken-rs = "0.5"

# SSE parsing
eventsource-stream = "0.2"

# Auth
jsonwebtoken = "9"

# Misc
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
bytes = "1"
percent-encoding = "2"
rand = "0.8"
parking_lot = "0.12"
memmap2 = "0.9"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
lto = "thin"
