[package]
name = "neuralframe-prompt"
description = "Compiled prompt templating engine with versioning and A/B testing"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tiktoken-rs = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
